--- a/src/MLBlazorRCL/MainView/Main.razor
+++ b/src/MLBlazorRCL/MainView/Main.razor
@@ -67,11 +67,10 @@
       </button>
 
       <!-- ---------- Filter-->
-      @*ACHTUNG: VS-Bug in älteren VS-Versionen. Wird dort als fehlerhaft angezeigt, kompiliert und läuft aber! https://github.com/dotnet/razor/issues/8315*@
-      <select @bind="taskFilter" @bind:after="() => ShowTaskSet(this.category)" style="height:25px;width:170px;display:inline-block" class="form-control input-sm blue">
-       <option value="0">Alle Aufgaben</option>
-       <option value="1">Nur offene Aufgaben</option>
-       <option value="2">Nur erledigte Aufgaben</option>
+      <select @bind="taskFilter" @bind:after="() => ShowTaskSet(this.category)" style="margin-left:5px;height:25px;width:170px;display:inline-block" class="form-control input-sm blue">
+       <option value="Alle">Alle Aufgaben</option>
+       <option value="Offene">Nur offene Aufgaben</option>
+       <option value="Erledigte">Nur erledigte Aufgaben</option>
       </select>
 
       <!-- ---------- Schaltlächen -->
