Cancel, Logo, Letzte Änderung u.a.

--- a/src/ITVisions.Blazor/Controls/TextTemplateForm.razor
+++ b/src/ITVisions.Blazor/Controls/TextTemplateForm.razor
@@ -182,7 +182,7 @@
 
   @if (ShowSubmitButton)
   {
-   <button type="submit" class="btn btn-primary">@SubmitButtonText</button>
+   <ITVButton type="submit" class="btn btn-primary">@SubmitButtonText</ITVButton>
   }
  </EditForm>
 }
