--- a/src/ITVisions.Blazor/Controls/ITVRegion.razor
+++ b/src/ITVisions.Blazor/Controls/ITVRegion.razor
@@ -29,6 +29,10 @@
  [Parameter]
  public string URLTitle { get; set; }
 
+ [Parameter]
+ public bool SmallHeader { get; set; }
+
+
  static int count { get; set; }
  public int CountID { get; set; }
 
@@ -53,8 +57,8 @@
 }
 
 <div class="accordion-item">
- <h4 class="accordion-header"  id="@("region" + CountID)">
-  <button title="@Title" class="accordion-button @(IsOpen ? "" : "collapsed")"
+ <h4 class="accordion-header" id="@("region" + CountID)" >
+  <button title="@Title" class="accordion-button @(IsOpen ? "" : "collapsed")" style="@(SmallHeader ? "padding: 0.4rem" : "")"
           type="button"
           @onclick="() => ToggleAccordion()">
    <i class="bi bi-chevron-@(IsOpen ? "down" : "right") me-2"></i>
