Interpretiere auch Zeilen ohne - oder + zu beginn wie -

--- a/src/ITVisions.Blazor/Controls/TextTemplateForm.razor
+++ b/src/ITVisions.Blazor/Controls/TextTemplateForm.razor
@@ -184,7 +184,7 @@
 
   @if (ShowSubmitButton)
   {
-   <ITVButton type="submit" class="btn btn-primary">@SubmitButtonText</ITVButton>
+   <ITVButton type="submit" class="btn btn-primary mt-2">@SubmitButtonText</ITVButton>
   }
  </EditForm>
 }
