--- a/src/ITVisions.Blazor/Controls/TextTemplateForm.razor
+++ b/src/ITVisions.Blazor/Controls/TextTemplateForm.razor
@@ -49,7 +49,8 @@
        }
        @if (!string.IsNullOrEmpty(field.Note))
        {
-         <span class="info-icon" style="margin-left:5px;" data-tooltip="@field.Note">ℹ️</span>
+         <InfoIcon Icon="ℹ️" Text="@field.Note" />
+    
        }
       </label>
      }
