--- a/src/ITVisions.Blazor/Controls/TextTemplateForm.razor
+++ b/src/ITVisions.Blazor/Controls/TextTemplateForm.razor
@@ -93,7 +93,7 @@
      <div class="d-flex flex-column gap-2">
       @foreach (var option in field.Options)
       {
-       var isSelected = field.ValueString?.Split(',').Select(v => v.Trim()).Contains(option) ?? false;
+       var isSelected = field.ValueString?.Split('|').Select(v => v.Trim()).Contains(option) ?? false;
        <div class="form-check">
         <input class="form-check-input" type="checkbox" id="@($"{field.Key}_{option}")" 
                checked="@isSelected"
@@ -244,7 +244,7 @@
  {
   var selectedValues = string.IsNullOrEmpty(field.ValueString)
    ? new List<string>()
-   : field.ValueString.Split(',').Select(v => v.Trim()).ToList();
+   : field.ValueString.Split('|').Select(v => v.Trim()).ToList();
 
   if (isChecked && !selectedValues.Contains(option))
   {
@@ -255,7 +255,7 @@
    selectedValues.Remove(option);
   }
 
-  field.ValueString = string.Join(", ", selectedValues);
+  field.ValueString = string.Join("| ", selectedValues);
   NotifyValuesChanged();
  }
 
