--- a/src/ITVisions.Blazor/Controls/InfoIcon.razor
+++ b/src/ITVisions.Blazor/Controls/InfoIcon.razor
@@ -1,10 +1,21 @@
-﻿
-<span class="info-icon" data-tooltip="@Text">@Icon</span>
-
+﻿@if (href.IsNullOrEmpty())
+{
+ <span class="info-icon" data-tooltip="@Text">@Icon</span>
+}
+else
+{
+ <a href="@href" target="@_target">
+  <span class="info-icon" data-tooltip="@Text">@Icon</span>
+ </a> 
+}
 @code {
 
  [Parameter]
  public string Icon { get; set; } = "ℹ";
  [Parameter]
- public string Text { get; set; }
+ public string Text { get; set; } = "";
+ [Parameter]
+ public string href { get; set; } = "";
+ [Parameter]
+ public string _target { get; set; } = "";
 }
