--- a/src/ITVisions.Blazor/Controls/InfoIcon.razor
+++ b/src/ITVisions.Blazor/Controls/InfoIcon.razor
@@ -11,7 +11,7 @@ else
 @code {
 
  [Parameter]
- public string Icon { get; set; } = "ℹ";
+ public string Icon { get; set; } = "ℹ️";
  [Parameter]
  public string Text { get; set; } = "";
  [Parameter]
