--- a/src/ITVisions.Blazor/Controls/TextTemplateForm.razor.css
+++ b/src/ITVisions.Blazor/Controls/TextTemplateForm.razor.css
@@ -1,3 +1,17 @@
+/* Chapter Überschrift */
+.chapter-heading {
+ color: #0d6efd;
+ font-weight: 700;
+ border-bottom: 3px solid #0d6efd;
+ padding-bottom: 0.5rem;
+}
+
+/* Seiten-Header */
+.page-header h3 {
+ color: #495057;
+ font-weight: 600;
+}
+
 /* Größere Checkboxen und Radio Buttons */
 .form-check-input {
  width: 1.5em;
