--- a/src/ITVisions.Blazor/Controls/TextTemplateForm.razor
+++ b/src/ITVisions.Blazor/Controls/TextTemplateForm.razor
@@ -23,7 +23,22 @@
   {
    <div class="page-header mb-4">
     <h3>Seite @(CurrentPageIndex + 1) von @Pages.Count: @Pages[CurrentPageIndex].PageName</h3>
-    <hr />
+
+    @* Fortschrittsanzeige *@
+    <div class="progress mt-3" style="height: 25px;">
+     @{
+      var progressPercentage = ITVisions.MathUtil.PerCent(CurrentPageIndex+1, Pages.Count);
+     }
+     <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning"
+          role="progressbar" 
+          style="width: @(progressPercentage)%"
+          aria-valuenow="@(CurrentPageIndex + 1)" 
+          aria-valuemin="0" 
+          aria-valuemax="@Pages.Count">
+      <strong>@(CurrentPageIndex + 1) / @Pages.Count</strong>
+     </div>
+    </div>
+
    </div>
   }
 
